AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		AsynClient.h \
		BaseClient.h \
		BaseDispatcher.h \
		BaseHandler.h \
		Client.h \
		Client.tcc \
		ConcurrentMessageDispatcher.h \
		ConcurrentMessageQueue.h \
		ConcurrentMessageQueueFactory.h \
		ConcurrentMessageQueueHelper.h \
		Handler.h \
		Handler.tcc \
		HandlerThread.h \
		HandlerWrapper.h \
		JoinThread.h \
		JoinerDispatcher.h \
		MessagingGateway.h \
		NeighborOut.h \
		NeighborThread.h \
		NewClient.h \
		NewConcurrentMessageDispatcher.h \
		NewHandler.h \
		NewNeighborOut.h \
		NewNeighborThread.h \
		NewOutputThread.h \
		NewServer.h \
		NewThreadFactory.h \
		OutputThread.h \
		OutputDispatcher.h \
		Server.h \
		Session.h \
		StreamingDMCSThread.h \
		ThreadFactory.h \
		RelSatSolverThread.h \
		Worker.h \
		connection.hpp



# don't include boost::message_queue-related stuff for now
#           MessageDispatcher.h 
#           MessageQueue.h 
#           MessageQueueFactory.h 
