AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		ConcurrentMessageQueue.h \
		Manager.h \
		NewClient.h \
		NewConcurrentMessageDispatcher.h \
		NewHandler.h \
		HandlerWrapper.h \
		NewNeighborOut.h \
		NewNeighborThread.h \
		NewJoinerDispatcher.h \
		NewOutputDispatcher.h \
		NewOutputThread.h \
		RequestDispatcher.h \
		NewServer.h \
		NewThreadFactory.h \
		connection.hpp

