AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		BaseBuilder.h \
		BridgeRulesBuilder.h \
		BridgeRulesBuilder.tcc \
		ClaspResultBuilder.h \
		ClaspResultBuilder.tcc \
		ClaspResultGrammar.h \
		ClaspResultGrammar.tcc \
		ClaspResultOnlineParser.h \
		ClaspResultOnlineParser.tcc \
		CnfBuilder.h \
		CnfBuilder.tcc \
		CnfGrammar.h \
		CnfGrammar.tcc \
		LocalKBBuilder.h \
		LocalKBBuilder.tcc \
		PropositionalASPGrammar.h \
		PropositionalASPGrammar.tcc \
		ParserDirector.h \
		ParserDirector.tcc \
		SpiritDebugging.h \
		SpiritFilePositionNode.h 



