AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS =  \
		BridgeRuleParser.h \
		DLVResultGrammar.h \
		DLVResultParser.h \
		NewDLVResultParser.h \
		ParserState.h \
		QueryPlanParser.h \
		NewQueryPlanParser.hpp \
		QueryPlanGrammar.hpp \
		QueryPlanGrammar.tcc \
		ReturnPlanParser.h 



